changed buttons on projects page & fixed breakpoint on tablet for feature

--- a/src/pages/Cardholder.css
+++ b/src/pages/Cardholder.css
@@ -16,3 +16,8 @@
 .card-body a {
     text-decoration: none;
 }
+
+#card-btn {
+    padding-top: -10;
+    margin: 0;
+}
