--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -199,3 +199,16 @@ body {
       border-radius: 1rem;
     }
   }
+
+ /* Tablet */ 
+
+  @media only screen and (max-width: 1023px) {
+
+    #abtme-fea {
+      padding-bottom: 20px;
+    }
+
+    #abtme-fea-1 {
+      padding-bottom: 80px;
+    }
+  }
